--- a/RowanSAC/src/main/res/values/styles.xml
+++ b/RowanSAC/src/main/res/values/styles.xml
@@ -3,6 +3,17 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
+        <item name="android:actionBarStyle">@style/MyActionBar</item>
     </style>
 
+    <style name="MyActionBar"
+        parent="android:Widget.Holo.Light.ActionBar.Solid.Inverse">
+        <item name="android:background">@color/rowanbrown</item>
+    </style>
+
+    <style name="settings"
+        parent="android:Theme.Holo">
+ <!--       <item name="android:">30dp</item>-->
+    </style>
+    <color name="rowanbrown">#3F1A0A</color>
 </resources>
