--- a/RowanSAC/src/main/res/menu/main.xml
+++ b/RowanSAC/src/main/res/menu/main.xml
@@ -5,4 +5,8 @@
         android:title="@string/action_settings"
         android:orderInCategory="100"
         app:showAsAction="never" />
+    <item android:id="@+id/notify"
+        android:title="Test Notification"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
 </menu>
