--- a/RowanSAC/src/main/res/layout/activity_main.xml
+++ b/RowanSAC/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
             android:choiceMode="singleChoice"
             android:divider="@android:color/transparent"
             android:dividerHeight="0dp"
-            android:background="@color/rowanbrowndark"/>
+            android:background="#111"/>
     </android.support.v4.widget.DrawerLayout>
 
 
