--- a/RowanSAC/src/main/res/layout/activity_main.xml
+++ b/RowanSAC/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 />
+
         </FrameLayout>
         <!-- android:layout_gravity="start" tells DrawerLayout to treat
              this as a sliding drawer on the left side for left-to-right
@@ -34,13 +35,16 @@
              with the content view. -->
         <ListView
             android:id="@+id/left_drawer"
-            android:layout_width="240dp"
+            android:layout_width="360dp"
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:choiceMode="singleChoice"
-            android:divider="@android:color/transparent"
-            android:dividerHeight="0dp"
-            android:background="@color/rowanbrowndark"/>
+            android:divider="@color/rowanbrown"
+            android:dividerHeight="2dp"
+            android:background="@drawable/jb1"
+            android:alpha="0.5"
+            android:textFilterEnabled="false" />
+
     </android.support.v4.widget.DrawerLayout>
 
 
