--- a/RowanSAC/src/main/res/layout/drawer_list_item.xml
+++ b/RowanSAC/src/main/res/layout/drawer_list_item.xml
@@ -22,6 +22,9 @@
     android:gravity="center_vertical"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:textColor="#fff"
+    android:textColor="#000"
+    android:textSize="20dp"
+    android:paddingTop="20dp"
+    android:paddingBottom="20dp"
     android:background="?android:attr/activatedBackgroundIndicator"
     android:minHeight="?android:attr/listPreferredItemHeightSmall"/>
