--- a/RowanSAC/src/main/res/values/styles.xml
+++ b/RowanSAC/src/main/res/values/styles.xml
@@ -14,22 +14,11 @@
     </style>
 
     <style name="settings"
-        parent="android:Theme.Holo">
+        parent="android:Theme.Holo.Light">
+        <item name="android:actionBarStyle">@style/MyActionBar</item>
  <!--       <item name="android:">30dp</item>-->
     </style>
-    <style name="Theme.DropDown.Dark.Rowan"
-        parent="android:Widget.ActionBar">
-        <item name="android:background">@color/rowanbrown</item>
-    </style>
-    <style name="overflow" parent="android:Widget.ListPopupWindow">
-        <item name="android:popupBackground">@color/rowanbrown</item>
-    </style>
-    <style name="myDropDownListView"
-        parent="Theme.DropDown.Dark.Rowan">
-        <!--<item name="android:background">@color/rowanbrown</item>-->
-        <!--<item name="android:background">@drawable/jb1</item>-->
-    </style>
-
+      
     <style name="Theme.stylingactionbar.widget" parent="@android:style/Theme.Holo">
         <item name="android:popupMenuStyle">@style/PopupMenu</item>
         <item name="android:dropDownListViewStyle">@style/DropDownListView</item>
