Ton of features
We had a very productive night.
-You can now take pictures and they are saved to the Gallery in the
SAC2014 folder
-New icon that's flat and beautiful
-New header image that's more compact and fits perfectly
-You can share photos to the app
-You can use Kitkat's Storage Framework to pick images (or use the
standard picker from Jelly Bean and below)
-On Kitkat and up there will be a transparent status bar and navigation
buttons
-Uploading photos to the server doesn't work, but it doesn't crash
anymore (Yay! :D )
-Plenty of other stuff under the hood too.

--- a/RowanSAC/src/main/res/layout/drawer_list_item.xml
+++ b/RowanSAC/src/main/res/layout/drawer_list_item.xml
@@ -24,6 +24,7 @@
     android:paddingRight="16dp"
     android:textColor="#000"
     android:textSize="20dp"
+    android:fontFamily="sans-serif-light"
     android:paddingTop="20dp"
     android:paddingBottom="20dp"
     android:background="?android:attr/activatedBackgroundIndicator"
