--- a/RowanSAC/src/main/res/menu/main.xml
+++ b/RowanSAC/src/main/res/menu/main.xml
@@ -1,12 +1,30 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    
+
+    <item android:id="@+id/action_camera"
+        android:icon="@android:drawable/ic_menu_camera"
+        android:showAsAction="always"
+        app:showAsAction="always"
+        android:visible="true"
+        android:orderInCategory="100"
+        android:title="Camera" />
+
+    <item android:id="@+id/action_upload"
+        android:icon="@android:drawable/ic_menu_upload"
+        android:showAsAction="always|withText"
+        android:orderInCategory="100"
+        android:visible="true"
+        app:showAsAction="always|withText"
+        android:title="Upload" />
+
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
         app:showAsAction="never" />
+
     <item android:id="@+id/notify"
         android:title="Test Notification"
         android:orderInCategory="100"
         app:showAsAction="never" />
+
 </menu>
