--- a/RowanSAC/src/main/res/values/styles.xml
+++ b/RowanSAC/src/main/res/values/styles.xml
@@ -6,11 +6,15 @@
         <!-- Customize your theme here. -->
         <item name="android:actionBarStyle">@style/MyActionBar</item>
         <item name="android:actionBarWidgetTheme">@style/Theme.stylingactionbar.widget</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowBackground">@color/rowanbrown</item>
+        <item name="android:windowTranslucentNavigation">true</item>
     </style>
 
     <style name="MyActionBar"
         parent="android:Widget.Holo.Light.ActionBar.Solid.Inverse">
         <item name="android:background">@color/rowanbrown</item>
+        <item name="android:textColor">#B79B75</item>
     </style>
 
     <style name="settings"
