Improved photo uploading
-You can now share photos TO the app
-Button to start upload, advanced uploading layout
-Captions, 200 character limit with live display including an indicator
when you overstep your limit
-Removed a few unnecessary debug toasts

--- a/RowanSAC/src/main/res/layout/activity_main.xml
+++ b/RowanSAC/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_height="fill_parent"
     android:paddingLeft="0dp"
     android:paddingRight="0dp"
-    android:paddingTop="80dp"
+    style="@style/activity_main_kk"
     android:paddingBottom="0dp"
     tools:context=".MainActivity">
 
