--- a/RowanSAC/src/main/res/values/colors.xml
+++ b/RowanSAC/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="white">#fff</color>
     <color name="black">#000</color>
+    <color name="red">#ff0000</color>
 </resources>
