--- a/RowanSAC/src/main/res/layout/activity_upload_photo.xml
+++ b/RowanSAC/src/main/res/layout/activity_upload_photo.xml
@@ -1,68 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     style="@style/activity_upload_kk"
     android:paddingLeft="0dp"
     android:paddingRight="0dp"
     android:paddingBottom="0dp"
-    android:background="@android:color/white" >
-    <!--<Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Click To Upload File"
-        android:id="@+id/uploadButton"
-        />-->
+    android:background="@android:color/white"
+    android:weightSum="100"
+    android:orientation="vertical">
+
     <ImageView
-        android:layout_height="60dp"
-        android:layout_width="match_parent"
-        android:scaleType="centerInside"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/upload_photo_preview"
-        android:src="@drawable/ic_launcher"/>
+            android:layout_height="0dip"
+            android:layout_width="match_parent"
+            android:src="@drawable/ic_launcher"
+            android:layout_weight="75"
+            android:layout_marginTop="10dp"
+            android:id="@+id/upload_photo_preview"
+            android:layout_gravity="center"
+            android:clickable="true"
+            android:longClickable="true"
+            />
     <LinearLayout
-        android:layout_height="48dp"
-        android:layout_width="348dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="60dp"
-        android:id="@+id/linearLayout">
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_marginRight="25dp"
+        android:layout_weight="1">
         <EditText
             android:layout_height="48dp"
-            android:layout_width="300dp"
+            android:layout_width="0dp"
+            android:layout_marginLeft="15dp"
+            android:layout_weight="40"
             android:id="@+id/upload_photo_caption"/>
-
         <ImageButton
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:id="@+id/upload_photo_button"
-            android:layout_alignBottom="@+id/linearLayout"
-            android:layout_toRightOf="@+id/linearLayout"
             android:cropToPadding="false"
             android:src="@android:drawable/ic_menu_upload"
             android:scaleType="fitCenter" />
-    </LinearLayout>
+        </LinearLayout>
     <TextView
         android:layout_height="24dp"
         android:layout_width="match_parent"
         android:id="@+id/upload_photo_limit"
         android:text="200"
-        android:layout_marginTop="108dp"
         android:textSize="9sp"
         android:layout_marginLeft="40dp"
+        android:layout_weight="3"
         />
     <TextView
         android:layout_width="fill_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="140dp"
+        android:layout_height="wrap_content"
         android:text="Hello"
         android:textSize="28dp"
         android:fontFamily="sans-serif-thin"
         android:gravity="center_horizontal"
         android:id="@+id/messageText"
         android:textColor="#000000"
-        android:textStyle="bold"
-        android:paddingTop="60dp" />
+        android:textStyle="bold" />
+</LinearLayout>
+    <!--
+    <RelativeLayout
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_weight="5">
+
+    </RelativeLayout>-->
+    <!--<LinearLayout
+        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:layout_weight="1">
+        <ImageView
+            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:scaleType="centerInside"
+            android:layout_centerHorizontal="true"
+
+            android:src="@drawable/ic_launcher"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_height="48dp"
+        android:layout_width="348dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="60dp"
+        android:id="@+id/linearLayout"
+        android:layout_weight="1">
 
 
 
-</RelativeLayout>
+
+
+    </LinearLayout>
+</RelativeLayout>-->
