--- a/RowanSAC/src/main/res/values/colors.xml
+++ b/RowanSAC/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="white">#fff</color>
     <color name="black">#000</color>
     <color name="red">#ff0000</color>
+    <color name="gray">#ddd</color>
 </resources>
