--- a/RowanSAC/src/main/res/layout-land/activity_upload_photo.xml
+++ b/RowanSAC/src/main/res/layout-land/activity_upload_photo.xml
@@ -8,48 +8,61 @@
     android:paddingBottom="0dp"
     android:background="@android:color/white"
     android:weightSum="100"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
     <ImageView
-            android:layout_height="0dip"
-            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_width="0dp"
             android:src="@drawable/ic_launcher"
-            android:layout_weight="95"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="5dp"
             android:id="@+id/upload_photo_preview"
             android:layout_gravity="center"
             android:clickable="true"
             android:longClickable="true"
+            android:layout_weight="60"
             />
     <LinearLayout
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:layout_marginRight="25dp"
-        android:layout_weight="1">
+        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:orientation="vertical"
+        android:layout_marginRight="5dp"
+        android:layout_weight="40">
         <EditText
-            android:layout_height="48dp"
-            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_gravity="bottom"
             android:layout_marginLeft="15dp"
-            android:layout_weight="40"
+            android:layout_marginTop="40dp"
             android:id="@+id/upload_photo_caption"/>
-        <ImageButton
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:id="@+id/upload_photo_button"
-            android:cropToPadding="false"
-            android:src="@android:drawable/ic_menu_upload"
-            android:scaleType="fitCenter" />
+        <LinearLayout
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:weightSum="100"
+            android:layout_marginLeft="30dp">
+            <TextView
+                android:layout_height="20dp"
+                android:layout_width="20dp"
+                android:id="@+id/upload_photo_limit"
+                android:text="200"
+                android:textSize="9sp"
+                android:layout_marginTop="0dp"
+                android:layout_marginLeft="0dp"
+                android:layout_weight="95"
+                />
+            <ImageButton
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:id="@+id/upload_photo_button"
+                android:cropToPadding="false"
+                android:src="@android:drawable/ic_menu_upload"
+                android:scaleType="fitCenter"
+                android:layout_marginLeft="60dp"
+                android:layout_weight="5"/>
+
         </LinearLayout>
-    <TextView
-        android:layout_height="24dp"
-        android:layout_width="match_parent"
-        android:id="@+id/upload_photo_limit"
-        android:text="200"
-        android:textSize="9sp"
-        android:layout_marginLeft="40dp"
-        android:layout_weight="3"
-        />
+        </LinearLayout>
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
