--- a/RowanSAC/src/main/res/values/arrays.xml
+++ b/RowanSAC/src/main/res/values/arrays.xml
@@ -13,7 +13,7 @@
         -->
         <!--Register if no profile, otherwise, profile-->
         <item>Register</item>
-        <item>Login</item>
+        <item>Vote</item>
         <item>FAQ</item>
         <item>Gallery</item>
 
